{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 29,
  "lineage": "baca42f0-ecbe-b0e1-f18b-89ed25140590",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8c19c9561f52bf9",
            "association_id": "eipassoc-026950ec0ad38bb59",
            "domain": "vpc",
            "id": "eipalloc-0c8c19c9561f52bf9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b125fae69bf6f360",
            "private_dns": "ip-10-0-0-106.ec2.internal",
            "private_ip": "10.0.0.106",
            "public_dns": "ec2-54-167-200-110.compute-1.amazonaws.com",
            "public_ip": "54.167.200.110",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:191804143474:instance/i-0f052dff430f9109e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f052dff430f9109e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "karim1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a60a6533f6a52fc",
            "private_dns": "ip-10-0-1-227.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06076f5d7cf008105",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0574503bb58db9ead",
            "tags": {
              "Name": "Nexus"
            },
            "tags_all": {
              "Name": "Nexus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e7685b7a46252b2"
            ]
          },
          "dependencies": [
            "aws_security_group.sec-group",
            "aws_subnet.kareem-pv1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:191804143474:instance/i-0c002abd020fba432",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c002abd020fba432",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "karim1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c54d0dadeaf840e",
            "private_dns": "ip-10-0-2-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a231728d26ede9ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04dd38976c9b3e672",
            "tags": {
              "Name": "Sonarqube"
            },
            "tags_all": {
              "Name": "Sonarqube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e7685b7a46252b2"
            ]
          },
          "dependencies": [
            "aws_security_group.sec-group",
            "aws_subnet.kareem-pv2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:191804143474:instance/i-0792e2e093adc2f1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0792e2e093adc2f1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "karim1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06dd58aaaa4a1d235",
            "private_dns": "ip-10-0-0-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.136",
            "public_ip": "54.224.240.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eee528293fc1994a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8629b48ce5345dd",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e7685b7a46252b2"
            ]
          },
          "dependencies": [
            "aws_security_group.sec-group",
            "aws_subnet.kareem-pub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:internet-gateway/igw-068f6f884a423921f",
            "id": "igw-068f6f884a423921f",
            "owner_id": "191804143474",
            "tags": {
              "Name": "ansible-gw"
            },
            "tags_all": {
              "Name": "ansible-gw"
            },
            "vpc_id": "vpc-0e9fed9d6fea3c469"
          },
          "dependencies": [
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191804143474:loadbalancer/app/pub-lb/525aaec1cc74d755",
            "arn_suffix": "app/pub-lb/525aaec1cc74d755",
            "desync_mitigation_mode": "defensive",
            "dns_name": "pub-lb-946887576.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:191804143474:loadbalancer/app/pub-lb/525aaec1cc74d755",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pub-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09e7685b7a46252b2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-090d3e30bda29cc4e"
              },
              {
                "subnet_id": "subnet-0c8629b48ce5345dd"
              }
            ],
            "subnets": [
              "subnet-090d3e30bda29cc4e",
              "subnet-0c8629b48ce5345dd"
            ],
            "tags": {
              "Name": "public-lb"
            },
            "tags_all": {
              "Name": "public-lb"
            },
            "vpc_id": "vpc-0e9fed9d6fea3c469",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sec-group",
            "aws_subnet.kareem-pub",
            "aws_subnet.kareem-pub2",
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pub-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191804143474:listener/app/pub-lb/525aaec1cc74d755/419b72f56a1246c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191804143474:targetgroup/pv-targetGroup/49c7d195ed02bae0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191804143474:listener/app/pub-lb/525aaec1cc74d755/419b72f56a1246c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:191804143474:loadbalancer/app/pub-lb/525aaec1cc74d755",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public-lb",
            "aws_lb_target_group.pv-targetGroup",
            "aws_security_group.sec-group",
            "aws_subnet.kareem-pub",
            "aws_subnet.kareem-pub2",
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pv-targetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191804143474:targetgroup/pv-targetGroup/49c7d195ed02bae0",
            "arn_suffix": "targetgroup/pv-targetGroup/49c7d195ed02bae0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191804143474:targetgroup/pv-targetGroup/49c7d195ed02bae0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pv-targetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "private-targetgroup"
            },
            "tags_all": {
              "Name": "private-targetgroup"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e9fed9d6fea3c469"
          },
          "dependencies": [
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-Nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:191804143474:targetgroup/pv-targetGroup/49c7d195ed02bae0-20230216232408072700000005",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191804143474:targetgroup/pv-targetGroup/49c7d195ed02bae0",
            "target_id": "i-0f052dff430f9109e"
          },
          "dependencies": [
            "aws_instance.Nexus",
            "aws_lb_target_group.pv-targetGroup",
            "aws_security_group.sec-group",
            "aws_subnet.kareem-pv1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-Sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:191804143474:targetgroup/pv-targetGroup/49c7d195ed02bae0-20230216232337859400000004",
            "port": 9000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191804143474:targetgroup/pv-targetGroup/49c7d195ed02bae0",
            "target_id": "i-0c002abd020fba432"
          },
          "dependencies": [
            "aws_instance.Sonarqube",
            "aws_lb_target_group.pv-targetGroup",
            "aws_security_group.sec-group",
            "aws_subnet.kareem-pv2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8c19c9561f52bf9",
            "connectivity_type": "public",
            "id": "nat-0c7ca8017ea8b750c",
            "network_interface_id": "eni-0b125fae69bf6f360",
            "private_ip": "10.0.0.106",
            "public_ip": "54.167.200.110",
            "subnet_id": "subnet-0c8629b48ce5345dd"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.kareem-pub",
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:route-table/rtb-06e148f9796d472bf",
            "id": "rtb-06e148f9796d472bf",
            "owner_id": "191804143474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c7ca8017ea8b750c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kareem-rw-private"
            },
            "tags_all": {
              "Name": "kareem-rw-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9fed9d6fea3c469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat-gw",
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:route-table/rtb-0f64a92370e47d1de",
            "id": "rtb-0f64a92370e47d1de",
            "owner_id": "191804143474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068f6f884a423921f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "osos-rw"
            },
            "tags_all": {
              "Name": "osos-rw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9fed9d6fea3c469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fdc00efa8908d30",
            "route_table_id": "rtb-0f64a92370e47d1de",
            "subnet_id": "subnet-0c8629b48ce5345dd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route",
            "aws_subnet.kareem-pub",
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02983cc43c5cb72a9",
            "route_table_id": "rtb-0f64a92370e47d1de",
            "subnet_id": "subnet-090d3e30bda29cc4e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route",
            "aws_subnet.kareem-pub2",
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f96df6e6708a6ddf",
            "route_table_id": "rtb-06e148f9796d472bf",
            "subnet_id": "subnet-0574503bb58db9ead"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private",
            "aws_subnet.kareem-pub",
            "aws_subnet.kareem-pv1",
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03862ca5d1caa2782",
            "route_table_id": "rtb-06e148f9796d472bf",
            "subnet_id": "subnet-04dd38976c9b3e672"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private",
            "aws_subnet.kareem-pub",
            "aws_subnet.kareem-pv2",
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:security-group/sg-09e7685b7a46252b2",
            "description": "Allow HTTP traffic from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e7685b7a46252b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sec-group",
            "name_prefix": "",
            "owner_id": "191804143474",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9fed9d6fea3c469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kareem-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:subnet/subnet-0c8629b48ce5345dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8629b48ce5345dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191804143474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub"
            },
            "tags_all": {
              "Name": "public-sub"
            },
            "vpc_id": "vpc-0e9fed9d6fea3c469"
          },
          "dependencies": [
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kareem-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:subnet/subnet-090d3e30bda29cc4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090d3e30bda29cc4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191804143474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub2"
            },
            "tags_all": {
              "Name": "public-sub2"
            },
            "vpc_id": "vpc-0e9fed9d6fea3c469"
          },
          "dependencies": [
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kareem-pv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:subnet/subnet-0574503bb58db9ead",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0574503bb58db9ead",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191804143474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub1"
            },
            "tags_all": {
              "Name": "private-sub1"
            },
            "vpc_id": "vpc-0e9fed9d6fea3c469"
          },
          "dependencies": [
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kareem-pv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:subnet/subnet-04dd38976c9b3e672",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dd38976c9b3e672",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191804143474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub2"
            },
            "tags_all": {
              "Name": "private-sub2"
            },
            "vpc_id": "vpc-0e9fed9d6fea3c469"
          },
          "dependencies": [
            "aws_vpc.kareem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kareem-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:vpc/vpc-0e9fed9d6fea3c469",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08db328bc8c87107d",
            "default_route_table_id": "rtb-0ad090d930bae53ec",
            "default_security_group_id": "sg-01c9577ed0c913a28",
            "dhcp_options_id": "dopt-0ef5bd1c500a06d04",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9fed9d6fea3c469",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad090d930bae53ec",
            "owner_id": "191804143474",
            "tags": {
              "Name": "kareem-vpc"
            },
            "tags_all": {
              "Name": "kareem-vpc"
            }
          }
        }
      ]
    }
  ]
}